--- a/Client/View/Sidebar.axaml
+++ b/Client/View/Sidebar.axaml
@@ -1,5 +1,48 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="Client.View.Sidebar">
+             xmlns:view="clr-namespace:Client.View"
+             xmlns:vm="clr-namespace:Client.ViewModel"
+             xmlns:util="clr-namespace:Client.Utility"
+             x:Class="Client.View.Sidebar"
+             x:CompileBindings="False">
 	
+	<UserControl.Resources>
+		<util:SidebarTranslateConverter x:Key="XConverter"/>
+		<vm:SidebarViewModel x:Key="SidebarViewModel"/>
+	</UserControl.Resources>
+	
+	<!-- https://docs.avaloniaui.net/docs/controls/transitioningcontentcontrol -->
+	<TransitioningContentControl Name="ParentControl"
+	                             DataContext="{StaticResource SidebarViewModel}"
+	                             Content="{Binding CurrentSidebar}">
+		<TransitioningContentControl.Styles>
+			<Style Selector="TransitioningContentControl">
+				<Setter Property="Width" Value="0.0"/>
+			</Style>
+			<Style Selector="TransitioningContentControl.Open">
+				<Setter Property="Width" Value="{Binding CurrentSidebarWidth}"/>
+			</Style>
+		</TransitioningContentControl.Styles>
+		
+		<TransitioningContentControl.RenderTransform>
+			<MultiBinding Converter="{StaticResource XConverter}">
+				<MultiBinding.Bindings>
+					<!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
+					<Binding Path="$self.Bounds.Width"/>
+					<Binding Path="CurrentSidebarWidth"/>
+				</MultiBinding.Bindings>
+			</MultiBinding>
+		</TransitioningContentControl.RenderTransform>
+		
+		<TransitioningContentControl.Transitions>
+			<Transitions>
+				<DoubleTransition Property="Width"
+				                  Duration="0:0:1.0">
+					<DoubleTransition.Easing>
+						<view:SidebarEasing />
+					</DoubleTransition.Easing>
+				</DoubleTransition>
+			</Transitions>
+		</TransitioningContentControl.Transitions>
+	</TransitioningContentControl>
 </UserControl>
