Sidebar still not working =( but I am on it - I have not given up. Yet...

--- a/Client/View/MainContent.axaml
+++ b/Client/View/MainContent.axaml
@@ -1,8 +1,8 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:vm="clr-namespace:Client.ViewModel"
-             x:Class="Client.View.Content"
-             x:CompileBindings="False"
+             x:DataType="vm:ContentViewModel"
+             x:Class="Client.View.MainContent"
              CornerRadius="20.0"
              BorderThickness="0.0"
              Background="{DynamicResource Dark}"
