--- a/Client/View/MainWindow.axaml
+++ b/Client/View/MainWindow.axaml
@@ -1,6 +1,8 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:view="using:Client.View"
+        xmlns:vm="using:Client.ViewModel"
+        x:DataType="vm:MainWindowViewModel"
         x:Class="Client.View.MainWindow"
         ExtendClientAreaChromeHints="OSXThickTitleBar, PreferSystemChrome"
         ExtendClientAreaToDecorationsHint="True"
@@ -22,7 +24,7 @@
                              Padding="10.0"
                              Margin="0.0 5.0 00.0 5.0"/>
 
-            <view:Content IsHitTestVisible="True"
+            <view:MainContent IsHitTestVisible="True"
                           Margin="0.0 0.0 10.0 10.0"/>
 		</DockPanel>
     </Panel>
