--- a/Client/View/Navigation.axaml
+++ b/Client/View/Navigation.axaml
@@ -1,6 +1,6 @@
 ﻿<UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:Client.View"
+             xmlns:view="using:Client.View"
              x:Class="Client.View.Navigation">
         
         <UserControl.Resources>
@@ -21,7 +21,7 @@
                                                 <TransformOperationsTransition Property="RenderTransform"
                                                                                Duration="0:0:1.0">
                                                         <TransformOperationsTransition.Easing>
-                                                                <local:NavigationEasing />
+                                                                <view:NavigationEasing />
                                                         </TransformOperationsTransition.Easing>
                                                 </TransformOperationsTransition>
                                         </Transitions>
