--- a/Client/View/Sidebar.axaml
+++ b/Client/View/Sidebar.axaml
@@ -3,8 +3,8 @@
              xmlns:view="clr-namespace:Client.View"
              xmlns:vm="clr-namespace:Client.ViewModel"
              xmlns:util="clr-namespace:Client.Utility"
-             x:Class="Client.View.Sidebar"
-             x:CompileBindings="False">
+             x:DataType="vm:SidebarViewModel"
+             x:Class="Client.View.Sidebar">
 	
 	<UserControl.Resources>
 		<util:SidebarTranslateConverter x:Key="XConverter"/>
@@ -14,6 +14,7 @@
 	<!-- https://docs.avaloniaui.net/docs/controls/transitioningcontentcontrol -->
 	<TransitioningContentControl Name="ParentControl"
 	                             DataContext="{StaticResource SidebarViewModel}"
+	                             Classes.Open="{Binding IsOpened}"
 	                             Content="{Binding CurrentSidebar}">
 		<TransitioningContentControl.Styles>
 			<Style Selector="TransitioningContentControl">
