--- a/Client/View/MainContent.axaml
+++ b/Client/View/MainContent.axaml
@@ -1,17 +1,19 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:view="clr-namespace:Client.View"
              xmlns:vm="clr-namespace:Client.ViewModel"
-             x:DataType="vm:ContentViewModel"
+             mc:Ignorable="d"
              x:Class="Client.View.MainContent"
              CornerRadius="20.0"
              BorderThickness="0.0"
              Background="{DynamicResource Dark}"
              Padding="10.0">
-	<UserControl.Resources>
-		<vm:ContentViewModel x:Key="ContentViewModel"/>
-	</UserControl.Resources>
+	<Design.DataContext>
+		<vm:ContentViewModel/>
+	</Design.DataContext>
 	
 	<TransitioningContentControl Name="ParentControl"
-	                             DataContext="{StaticResource ContentViewModel}"
-	                             Content="{Binding CurrentContent}" />
+	                             Content="{Binding CurrentContent}"/>
 </UserControl>
