--- a/Client/View/Sidebar.axaml
+++ b/Client/View/Sidebar.axaml
@@ -1,30 +1,23 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:view="clr-namespace:Client.View"
              xmlns:vm="clr-namespace:Client.ViewModel"
              xmlns:util="clr-namespace:Client.Utility"
-             x:DataType="vm:SidebarViewModel"
+             mc:Ignorable="d"
              x:Class="Client.View.Sidebar">
+	<Design.DataContext>
+		<vm:SidebarViewModel/>
+	</Design.DataContext>
 	
 	<UserControl.Resources>
 		<util:SidebarTranslateConverter x:Key="XConverter"/>
-		<vm:SidebarViewModel x:Key="SidebarViewModel"/>
 	</UserControl.Resources>
 	
-	<!-- https://docs.avaloniaui.net/docs/controls/transitioningcontentcontrol -->
 	<TransitioningContentControl Name="ParentControl"
-	                             DataContext="{StaticResource SidebarViewModel}"
-	                             Classes.Open="{Binding IsOpened}"
-	                             Content="{Binding CurrentSidebar}">
-		<TransitioningContentControl.Styles>
-			<Style Selector="TransitioningContentControl">
-				<Setter Property="Width" Value="0.0"/>
-			</Style>
-			<Style Selector="TransitioningContentControl.Open">
-				<Setter Property="Width" Value="{Binding CurrentSidebarWidth}"/>
-			</Style>
-		</TransitioningContentControl.Styles>
-		
+	                             Content="{Binding CurrentSidebar}"
+	                             Width="{Binding CurrentSidebarWidth}">
 		<TransitioningContentControl.RenderTransform>
 			<MultiBinding Converter="{StaticResource XConverter}">
 				<MultiBinding.Bindings>
