--- a/Client/View/Titlebar.axaml
+++ b/Client/View/Titlebar.axaml
@@ -1,11 +1,10 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
              x:Class="Client.View.Titlebar"
              Height="38">
-	<UserControl.Resources>
-		
-	</UserControl.Resources>
-	
 	<UserControl.Styles>
 		<Style Selector="TextBlock.Bold">
 			<Setter Property="FontSize" Value="16.0" />
