Sidebars are now working! =)

--- a/Client/View/MainContent.axaml
+++ b/Client/View/MainContent.axaml
@@ -15,5 +15,5 @@
 	</Design.DataContext>
 	
 	<TransitioningContentControl Name="ParentControl"
-	                             Content="{Binding CurrentContent}"/>
+	                             Content="{Binding Content}"/>
 </UserControl>
