--- a/Client/App.axaml
+++ b/Client/App.axaml
@@ -11,6 +11,16 @@
             <Setter Property="BorderBrush" Value="Transparent"/>
             <Setter Property="ClickMode" Value="Release" />
         </Style>
+        
+        <Style Selector="TextBlock">
+            <Setter Property="FontFamily" Value="{DynamicResource Poppins}" />
+            <Setter Property="Foreground" Value="{DynamicResource White}" />
+            <Setter Property="FontSize" Value="16.0" />
+        </Style>
+        
+        <Style Selector="TextBlock.Bold">
+            <Setter Property="FontWeight" Value="SemiBold" />
+        </Style>
     </Application.Styles>
     
     <Application.Resources>
