--- a/Client/View/Content/HomePanel.axaml
+++ b/Client/View/Content/HomePanel.axaml
@@ -1,6 +1,6 @@
-<view:AbstractContent xmlns="https://github.com/avaloniaui"
+<view:ContentBase xmlns="https://github.com/avaloniaui"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:view="clr-namespace:Client.View.Content"
                       x:Class="Client.View.Content.HomePanel">
 	Test Panel
-</view:AbstractContent>
+</view:ContentBase>
