Dynamic SVG Loading idk

--- a/Client/App.axaml
+++ b/Client/App.axaml
@@ -24,14 +24,14 @@
     </Application.Styles>
     
     <Application.Resources>
-        <Color x:Key="Dark">#1E1E24</Color>
-        <Color x:Key="Mid">#26262D</Color>
-        <Color x:Key="Light">#545770</Color>
-        <Color x:Key="White">#EBF2FF</Color>
-        <Color x:Key="Accent">#FEBC2E</Color>
-        <Color x:Key="Red">#F45449</Color>
-        <Color x:Key="Green">#67FF76</Color>
-        <Color x:Key="Blue">#67B6FF</Color>
+        <Color x:Key="Dark">#FF1E1E24</Color>
+        <Color x:Key="Mid">#FF26262D</Color>
+        <Color x:Key="Light">#FF545770</Color>
+        <Color x:Key="White">#FFEBF2FF</Color>
+        <Color x:Key="Accent">#FFFEBC2E</Color>
+        <Color x:Key="Red">#FFF45449</Color>
+        <Color x:Key="Green">#FF67FF76</Color>
+        <Color x:Key="Blue">#FF67B6FF</Color>
         
         <FontFamily x:Key="Poppins">avares://Client/Assets/Fonts#Poppins</FontFamily>
         <FontFamily x:Key="Inter">avares://Client/Assets/Fonts#Inter</FontFamily>
